--- a/app/index.html
+++ b/app/index.html
@@ -580,8 +580,9 @@
                                             обслуживает частных лиц, АТП, различные предприятия с собственным
                                             автопарком легковых и коммерческих автомобилей.
                                             <br>
-                                            Мы вкладываем максимум знаний и труда в процесс реставрации электрооборудования.
-                                            <a href="#">Читать далее...</a>
+                                            Мы вкладываем максимум знаний и труда в процесс реставрации
+                                            электрооборудования...
+                                            <a href="#">Читать далее</a>
                                         </p>
                                     </div>
                                 </div>
@@ -616,7 +617,8 @@
                                         <div class="page-info">
                                             <div class="user" itemprop="author" itemscope="" itemtype="http://schema.org/Person">
                                                 <a href="http://avtorem.info/user/ivan" itemprop="url">
-                                                    <img src="/img/uploads/ivan.jpg" class="avatar micro" title="" alt=""><span class="login" itemprop="name">Ivan</span>
+                                                    <img src="/img/uploads/ivan.jpg" class="avatar micro" title="" alt="">
+                                                    <span class="login" itemprop="name">IvanIvanIvanIvan</span>
                                                 </a>
                                             </div>
                                             <div class="date">
@@ -625,27 +627,28 @@
                                             </div>
                                             <div class="views" title="Количество просмотров">
                                                 <i class="fa fa-eye"></i>
-                                                <span>13 122</span>
+                                                <span>2 123 122</span>
                                             </div>
                                             <div class="comments-count" title="Количество комментариев">
                                                 <a href="#comments">
-                                                    <i class="fa fa-comments-o"></i><span class="count" itemprop="commentCount">12</span>
+                                                    <i class="fa fa-comments-o"></i>
+                                                    <span class="count" itemprop="commentCount">12 222</span>
                                                 </a>
                                             </div>
                                             <div class="saved-count active" title="Сколько пользователей сохранили">
                                                 <i class="fa fa-heart"></i>
-                                                <span>1</span>
+                                                <span>122 222</span>
                                             </div>
 
                                             <div class="like-dislike-widget pull-right">
                                                 <div class="buttons">
                                                     <button class="like">
                                                         <i class="fa fa-thumbs-o-up"></i>
-                                                        <span class="count">345</span>
+                                                        <span class="count">345 333</span>
                                                     </button>
                                                     <button class="dislike">
                                                         <i class="fa fa-thumbs-o-down"></i>
-                                                        <span class="count">0</span>
+                                                        <span class="count">20 222</span>
                                                     </button>
                                                 </div>
                                             </div>
@@ -814,8 +817,18 @@
                                     <li><a href="#">3</a></li>
                                     <li><a href="#">4</a></li>
                                     <li><a href="#">5</a></li>
-                                    <li><a href="#">следующая <i class="fa fa-angle-right"></i></a></li>
-                                    <li><a href="#">последняя <i class="fa fa-angle-double-right"></i></a></li>
+                                    <li class="next" title="Следующая">
+                                        <a href="#">
+                                            <span>следующая</span>
+                                            <i class="fa fa-angle-right"></i>
+                                        </a>
+                                    </li>
+                                    <li class="last">
+                                        <a href="#" title="Последняя">
+                                            <span>последняя</span>
+                                            <i class="fa fa-angle-double-right"></i>
+                                        </a>
+                                    </li>
                                 </ul>
                             </div>
                         </div>
