Мобильное меню (раскрітие подменю).

--- a/app/index.html
+++ b/app/index.html
@@ -74,7 +74,7 @@
                 <li>
                     <a href="#">
                         <span>Автоистория</span>
-                        <i class="fa fa-caret-down"></i>
+                        <i class="fa fa-caret-down open-dropdown"></i>
                     </a>
                     <ul>
                         <li><a href="#">История Daewoo</a></li>
@@ -475,7 +475,7 @@
                                         <li>
                                             <a href="#">
                                                 <span>Автоистория</span>
-                                                <i class="fa fa-caret-down"></i>
+                                                <i class="fa fa-caret-down open-dropdown"></i>
                                             </a>
                                             <ul>
                                                 <li><a href="#">История Daewoo</a></li>
