Адаптивность статей в блоге (информация о статье, "читать далее") - доделано.

--- a/app/index.html
+++ b/app/index.html
@@ -529,23 +529,26 @@
                     </div>
                 </div>
             </div>
+
+            <div class="container-fluid">
+                <div class="search-section visible-sm visible-xs">
+                    <form action="#" class="search-form white-form" id="search-form-2">
+                        <div class="input-group">
+                            <input type="text" placeholder="Поиск по сайту">
+                            <span class="input-group-button">
+                                <button type="submit" form="search-form-2" value="" class="button accent-button">
+                                    <i class="fa fa-search"></i>
+                                </button>
+                            </span>
+                        </div>
+                    </form>
+                </div>
+            </div>
         </header>
 
         <div class="container-fluid">
             <div class="row">
-                <div class="col-md-8">
-                    <div class="search-section visible-sm visible-xs">
-                        <form action="#" class="search-form white-form" id="search-form-2">
-                            <div class="input-group">
-                                <input type="text" placeholder="Поиск по сайту">
-                                <span class="input-group-button">
-                                    <button type="submit" form="search-form-2" value="" class="button accent-button">
-                                        <i class="fa fa-search"></i>
-                                    </button>
-                                </span>
-                            </div>
-                        </form>
-                    </div>
+                <div class="col-md-8 without-padding">
                     <section id="content" class="white-section">
                         <!--<ul class="breadcrumbs" itemscope="" itemtype="http://schema.org/BreadcrumbList">-->
                             <!--<li class="home-page" itemprop="itemListElement" itemscope="" itemtype="http://schema.org/ListItem">-->
@@ -588,6 +591,10 @@
                                 </div>
                                 <div class="item article">
                                     <div class="item-title">
+                                        <ul class="category breadcrumbs">
+                                            <li><a href="#">Статьи</a></li>
+                                            <li><a href="#">Daewoo Lanos, Nexia, Matiz, Sens</a></li>
+                                        </ul>
                                         <h3>
                                             <a href="#">
                                                 Устраняем люфт и дребезжание ручки переключения передач
@@ -628,7 +635,14 @@
                                             своими руками монтировать передний сайлентблок, думаю,
                                             согласятся со мной, если я скажу, что эта работа может отнять...
                                         </p>
-                                        <a href="#" class="read-more" title="Читать далее"><i class="fa fa-long-arrow-right"></i></a>
+                                    </div>
+                                    <div class="delimiter delimiter-dashed">
+                                        <div class="link">
+                                            <a href="#">
+                                                <span>Читать далее</span>
+                                                <i class="fa fa-long-arrow-right"></i>
+                                            </a>
+                                        </div>
                                     </div>
                                     <div class="item-info">
                                         <div class="page-info">
@@ -660,17 +674,14 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="category help-text">
-                                            <span>Категория: </span>
-                                            <ul>
-                                                <li><a href="#">Статьи</a></li>
-                                                <li><a href="#">Daewoo Lanos, Nexia, Matiz, Sens</a></li>
-                                            </ul>
-                                        </div>
                                     </div>
                                 </div>
                                 <div class="item article">
                                     <div class="item-title">
+                                        <ul class="category breadcrumbs">
+                                            <li><a href="#">Статьи</a></li>
+                                            <li><a href="#">Daewoo Lanos, Nexia, Matiz, Sens</a></li>
+                                        </ul>
                                         <h3>
                                             <a href="#">
                                                 Замена рычага передней подвески на автомобиле Daewoo Lanos,
@@ -708,7 +719,14 @@
                                             качества влечёт за собой довольно большие проблемы. Но,
                                             обо всём по порядку...
                                         </p>
-                                        <a href="#" class="read-more" title="Читать далее"><i class="fa fa-long-arrow-right"></i></a>
+                                    </div>
+                                    <div class="delimiter delimiter-dashed">
+                                        <div class="link">
+                                            <a href="#">
+                                                <span>Читать далее</span>
+                                                <i class="fa fa-long-arrow-right"></i>
+                                            </a>
+                                        </div>
                                     </div>
                                     <div class="item-info">
                                         <div class="page-info">
@@ -739,17 +757,14 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="category help-text">
-                                            <span>Категория: </span>
-                                            <ul>
-                                                <li><a href="#">Статьи</a></li>
-                                                <li><a href="#">Daewoo Lanos, Nexia, Matiz, Sens</a></li>
-                                            </ul>
-                                        </div>
                                     </div>
                                 </div>
                                 <div class="item article">
                                     <div class="item-title">
+                                        <ul class="category breadcrumbs">
+                                            <li><a href="#">Статьи</a></li>
+                                            <li><a href="#">Daewoo Lanos, Nexia, Matiz, Sens</a></li>
+                                        </ul>
                                         <h3>
                                             <a href="#">Ремонт ключа трещотки своими руками</a>
                                         </h3>
@@ -784,7 +799,14 @@
                                             трещотка фирмы TOPTUL сломался. По началу, правда, думал,
                                             что ничего серьёзного. Так как ключ не первый день...
                                         </p>
-                                        <a href="#" class="read-more" title="Читать далее"><i class="fa fa-long-arrow-right"></i></a>
+                                    </div>
+                                    <div class="delimiter delimiter-dashed">
+                                        <div class="link">
+                                            <a href="#">
+                                                <span>Читать далее</span>
+                                                <i class="fa fa-long-arrow-right"></i>
+                                            </a>
+                                        </div>
                                     </div>
                                     <div class="item-info">
                                         <div class="page-info">
@@ -814,13 +836,6 @@
                                                     </button>
                                                 </div>
                                             </div>
-                                        </div>
-                                        <div class="category help-text">
-                                            <span>Категория: </span>
-                                            <ul>
-                                                <li><a href="#">Статьи</a></li>
-                                                <li><a href="#">Daewoo Lanos, Nexia, Matiz, Sens</a></li>
-                                            </ul>
                                         </div>
                                     </div>
                                 </div>
