Страницы категории и отдельной страницы.

--- a/app/index.html
+++ b/app/index.html
@@ -70,23 +70,23 @@
             <div class="title">Меню</div>
             <ul class="menu main-menu pull-left">
                 <li class="active"><a href="index.html"><span>Главная</span></a></li>
-                <li><a href="#"><span>О сайте</span></a></li>
+                <li><a href="page.html"><span>О сайте</span></a></li>
                 <li>
-                    <a href="#">
+                    <a href="category.html">
                         <span>Автоистория</span>
                         <i class="fa fa-caret-down open-dropdown"></i>
                     </a>
                     <ul>
-                        <li><a href="#">История Daewoo</a></li>
-                        <li><a href="#">История Nissan</a></li>
-                        <li><a href="#">История ВАЗ</a></li>
-                        <li><a href="#">История Mazda</a></li>
-                        <li><a href="#">История Shkoda</a></li>
+                        <li><a href="page.html">История Daewoo</a></li>
+                        <li><a href="page.html">История Nissan</a></li>
+                        <li><a href="page.html">История ВАЗ</a></li>
+                        <li><a href="page.html">История Mazda</a></li>
+                        <li><a href="page.html">История Shkoda</a></li>
                     </ul>
                 </li>
-                <li><a href="#"><span>Статьи</span></a></li>
-                <li><a href="#"><span>Советы</span></a></li>
-                <li><a href="#"><span>Гараж</span></a></li>
+                <li><a href="category.html"><span>Статьи</span></a></li>
+                <li><a href="category.html"><span>Советы</span></a></li>
+                <li><a href="category.html"><span>Гараж</span></a></li>
                 <li><a href="#"><span>Вопрос-ответ</span></a></li>
                 <li><a href="#"><span>Бортовой журнал</span></a></li>
             </ul>
@@ -468,35 +468,35 @@
                                             </a>
                                         </li>
                                         <li>
-                                            <a href="#">
+                                            <a href="page.html">
                                                 <span>О сайте</span>
                                             </a>
                                         </li>
                                         <li>
-                                            <a href="#">
+                                            <a href="category.html">
                                                 <span>Автоистория</span>
                                                 <i class="fa fa-caret-down open-dropdown"></i>
                                             </a>
                                             <ul>
-                                                <li><a href="#">История Daewoo</a></li>
-                                                <li><a href="#">История Nissan</a></li>
-                                                <li><a href="#">История ВАЗ</a></li>
-                                                <li><a href="#">История Mazda</a></li>
-                                                <li><a href="#">История Shkoda</a></li>
+                                                <li><a href="page.html">История Daewoo</a></li>
+                                                <li><a href="page.html">История Nissan</a></li>
+                                                <li><a href="page.html">История ВАЗ</a></li>
+                                                <li><a href="page.html">История Mazda</a></li>
+                                                <li><a href="page.html">История Shkoda</a></li>
                                             </ul>
                                         </li>
                                         <li>
-                                            <a href="#">
+                                            <a href="category.html">
                                                 <span>Статьи</span>
                                             </a>
                                         </li>
                                         <li>
-                                            <a href="#">
+                                            <a href="category.html">
                                                 <span>Советы</span>
                                             </a>
                                         </li>
                                         <li>
-                                            <a href="#">
+                                            <a href="category.html">
                                                 <span>Гараж</span>
                                             </a>
                                         </li>
@@ -945,24 +945,24 @@
                                 правильно, отремонтировать и обслужить&nbsp; автомобиль.
                             </p>
                         </div>
-                        <div class="tags">
-                            <a href="#">
-                                <span>Daewoo Lanos</span>
-                                <span class="count">234</span>
-                            </a>
-                            <a href="#">
-                                <span>Замена колеса</span>
-                                <span class="count">34</span>
-                            </a>
-                            <a href="#">
-                                <span>Колесные диски</span>
-                                <span class="count">4</span>
-                            </a>
-                            <a href="#">
-                                <span>Ремонт</span>
-                                <span class="count">67</span>
-                            </a>
-                        </div>
+                        <!--<div class="tags">-->
+                            <!--<a href="#">-->
+                                <!--<span>Daewoo Lanos</span>-->
+                                <!--<span class="count">234</span>-->
+                            <!--</a>-->
+                            <!--<a href="#">-->
+                                <!--<span>Замена колеса</span>-->
+                                <!--<span class="count">34</span>-->
+                            <!--</a>-->
+                            <!--<a href="#">-->
+                                <!--<span>Колесные диски</span>-->
+                                <!--<span class="count">4</span>-->
+                            <!--</a>-->
+                            <!--<a href="#">-->
+                                <!--<span>Ремонт</span>-->
+                                <!--<span class="count">67</span>-->
+                            <!--</a>-->
+                        <!--</div>-->
                         <div id="social-buttons-widget" class="widget">
                             <div class="text help-text pull-left">
                                 Понравилась статья? Поделись ею на своей странице!
@@ -1338,11 +1338,11 @@
                         <nav>
                             <ul class="menu info-menu">
                                 <li class="active"><a href="index.html">Главная</a></li>
-                                <li><a href="#">О сайте</a></li>
-                                <li><a href="#">Автоистория</a></li>
-                                <li><a href="#">Статьи</a></li>
-                                <li><a href="#">Советы</a></li>
-                                <li><a href="#">Гараж</a></li>
+                                <li><a href="page.html">О сайте</a></li>
+                                <li><a href="category.html">Автоистория</a></li>
+                                <li><a href="category.html">Статьи</a></li>
+                                <li><a href="category.html">Советы</a></li>
+                                <li><a href="category.html">Гараж</a></li>
                                 <li><a href="#">Вопрос-ответ</a></li>
                                 <li><a href="#">Бортовой журнал</a></li>
                             </ul>
