--- a/app/index.html
+++ b/app/index.html
@@ -913,11 +913,14 @@
 
                         <div class="text page-text">
                             <p>
-                                В жизни каждого автолюбителя наступает такой момент,
+                                В жизни каждого <em>автолюбителя</em> <i>наступает</i> такой момент,
                                 когда приходится все делать самому. Засучивать рукава,
-                                брать инструмент в руки и самостоятельно обслуживать,
-                                диагностировать неисправность, ремонтировать или тюнинговать
-                                свой автомобиль. Причин, по которым человек пытается все
+                                брать <strong>инструмент</strong> в <b>руки</b> и самостоятельно обслуживать,
+                                диагностировать неисправность, <strong><em>ремонтировать</em></strong> или тюнинговать
+                                свой автомобиль.
+                            </p>
+                            <p>
+                                Причин, по которым человек пытается все
                                 сделать своими руками, - множество. Это, например: желание
                                 человека узнать и понять устройство своего автомобиля и научиться
                                 чему-то новому. А для кого-то «поковыряться» в машине – это проявление
